Acquire license via license api for license-proxyserver (#66)
