# charts/opscenter-core/values.openapiv3_schema.yaml
@@ -2629,8 +2629,10 @@ properties:
         items:
           type: string
         type: array
-      license:
-        type: string
+      licenses:
+        additionalProperties:
+          type: string
+        type: object
       logLevel:
         format: int32
         type: integer
@@ -2658,6 +2660,16 @@ properties:
       nodeSelector:
         additionalProperties:
           type: string
+        type: object
+      platform:
+        properties:
+          baseURL:
+            type: string
+          token:
+            type: string
+        required:
+        - baseURL
+        - token
         type: object
       podAnnotations:
         additionalProperties:
@@ -2767,6 +2779,7 @@ properties:
     - image
     - imagePullPolicy
     - monitoring
+    - platform
     - registryFQDN
     - replicaCount
     - serviceAccount
